# basalt

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENCE  LICENSE  README  README.md  TODO  TODO.md  custom.rs  rustfmt.toml
.feluda/cache/: github_licenses.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: rust.yml
examples/: Cargo.toml  app.rs  mw-app.rs  text_test.rs  triangle.rs  widgets.rs  wl_layer.rs
msvc/lib/: bz2.lib  freetype.lib  harfbuzz.lib  libpng16.lib  zlib.lib
src/: atlas.rs  atlas_v2.rs  atlas_v3.rs  camera.rs  clipboard.rs  image_cache.rs  image_view.rs  input.rs  interval.rs  keyboard.rs  lib.rs  misc.rs  mouse.rs  serialize.rs  setup.rs  texture.rs  timer.rs  tmp_image_access.rs
src/atlas/: image.rs  mod.rs
src/bindings/: harfbuzz.rs  mod.rs  xinput2.rs
src/buffers/: basic.rs  mod.rs  multi_basic.rs
src/image/: convert.rs  error.rs  image_key.rs  mod.rs
src/image_cache/: convert.rs  image_key.rs  mod.rs
src/imt/: mod.rs  test.rs
src/input/: builder.rs  inner.rs  key.rs  mod.rs  qwerty.rs  qwery.rs  state.rs  v2.rs  winit.rs  x11.rs
src/input/proc/: bin_focus.rs  character.rs  cursor.rs  mod.rs  motion.rs  press.rs  release.rs  scroll.rs  window.rs
src/input_v2/: builder.rs  inner.rs  key.rs  mod.rs  state.rs
src/input_v2/proc/: bin_focus.rs  character.rs  cursor.rs  mod.rs  motion.rs  press.rs  release.rs  scroll.rs  win_focus.rs  window.rs
src/interface/: bin.rs  checkbox.rs  dou.rs  font.rs  hook.rs  interface.rs  itf_dual_buf.rs  mod.rs  odb.rs  odb_v2.rs  on_off_button.rs  raster.rs  render.rs  renderer.rs  scroll_bar.rs  scroll_bar2.rs  slider.rs  style.rs  text.rs  text2.rs  text3.rs  text_renderer.rs
src/interface/raster/: blend_fs.rs  composer.rs  final_fs.rs  final_vs.rs  layer_fs.rs  layer_vs.rs  mod.rs  pipeline.rs  square_vs.rs
src/interface/render/: composer.rs  final_fs.rs  layer_desc_pool.rs  layer_fs.rs  layer_vs.rs  mod.rs  pipeline.rs  square_vs.rs  updater.rs
src/interface/render/shaders/: mod.rs  ui.fs  ui.vs
src/interface/text_render/: bitmap.rs  bitmap_cache.rs  error.rs  font.rs  glyph.rs  mod.rs  parse.rs  script.rs  test.rs
src/interface/widget/: button.rs  mod.rs  theme.rs
src/interface/widgets/: builder.rs  button.rs  check_box.rs  code_editor.rs  error.rs  frame.rs  mod.rs  notebook.rs  placement.rs  progress_bar.rs  radio_button.rs  scaler.rs  scroll_bar.rs  select.rs  spin_button.rs  switch_button.rs  text_editor.rs  text_entry.rs  text_hooks.rs  theme.rs  toggle_button.rs
src/lease/: map.rs  mod.rs
src/misc/: http.rs  mod.rs  timer.rs  tmp_image_access.rs
src/render/: amwr.rs  context.rs  draw.rs  error.rs  mod.rs  worker.rs
src/render/shaders/: final.fs  final.vs  mod.rs  ui.fs
src/render/worker/: mod.rs  update.rs
src/render2/: context.rs  mod.rs  worker.rs
src/render2/shaders/: mod.rs  ui.vs
src/render2/worker/: mod.rs  update.rs
src/renderer/: amwr.rs  draw.rs  mod.rs  vertex.rs  worker.rs
src/renderer/shaders/: mod.rs  ui.fs
src/shaders/: basic.rs  basic_fs.rs  basic_vs.rs  deferred.rs  deferred_fs.rs  final_.rs  final_fs.rs  glyph_base_fs.rs  glyph_base_vs.rs  glyph_post_fs.rs  interface.rs  interface_fs.rs  interface_vs.rs  mod.rs  resolve_fs.rs  shadow.rs  shadow_fs.rs  shadow_vs.rs  square.rs  square_vs.rs  water.rs
src/surface/: mod.rs  winit.rs
src/sync/: mod.rs  q_share.rs
src/window/: builder.rs  error.rs  key.rs  mod.rs  monitor.rs  window.rs  winit.rs  x11.rs
src/window/backend/: mod.rs  wayland.rs  winit.rs
src/window/backend/wayland/: convert.rs  handles.rs  key_repeat.rs  mod.rs  wl_handlers.rs
src/window/backend/winit/: convert.rs  mod.rs
src/window/builder/: mod.rs  wl_layer.rs
