[package]
name = "basalt"
edition = "2021"
version = "0.21.0"
authors = ["Austin <me@austinj.me>"]
repository = "https://github.com/AustinJ235/basalt"
documentation = "https://docs.rs/basalt"
description = "A window/ui framework built upon vulkan."
license = "MIT"
keywords = ["vulkan", "graphics", "gui", "framework", "interface"]
categories = ["graphics","gui"]
readme = "README.md"
resolver = "2"

[dependencies]
arc-swap = "1"
curl = { version = "0.4", optional = true }
flume = "0.11"
guillotiere = "0.6"
image = { version = "0.24", optional = true }
ordered-float = "4"
parking_lot = "0.12"
raw-window-handle = "0.6"
smallvec = "1"
url = "2"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
vulkano-taskgraph = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }

[dependencies.cosmic-text]
version = "0.11"
features = ["shape-run-cache"]

[dependencies.winit]
version = "0.29"
default-features = false
features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]

[features]
default = ["image_decode", "image_download"]
# Removes the #[must_use] attribute from BinStyleValidation and uses the debug method when it drops.
style_validation_debug_on_drop = []
image_decode = ["dep:image"]
image_download = ["image_decode", "dep:curl"]
