[package]
name = "examples"
edition = "2021"
version = "0.0.0"
authors = ["Austin <me@austinj.me>"]
publish = false

[dependencies]
basalt = { path = "../" }
once_cell = "1.8.0"
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
