[package]
name = "examples"
edition = "2021"
version = "0.0.0"
authors = ["Austin <me@austinj.me>"]
publish = false

[dependencies]
basalt = { path = "../" }
vulkano = { "git" = "https://github.com/vulkano-rs/vulkano.git", rev = "3ae9ec0" }
vulkano-shaders = { "git" = "https://github.com/vulkano-rs/vulkano.git", rev = "3ae9ec0" }
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
