[package]
name = "examples"
edition = "2021"
version = "0.0.0"
authors = ["Austin <me@austinj.me>"]
publish = false

[dependencies]
basalt = { path = "../" }
# Dependancies below are not required for app.rs
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
